@@ -17,7 +17,7 @@
 
 package org.apache.camel.dsl.jbang.core.commands.kubernetes;
 
-import java.util.Collections;
+import java.util.Map;
 
 import io.fabric8.kubernetes.api.model.Pod;
 import io.fabric8.kubernetes.api.model.PodBuilder;
@@ -32,11 +32,12 @@ class PodLogsTest extends KubernetesBaseTest {
     public void shouldHandlePodNotFound() throws Exception {
         PodLogs command = createCommand();
         command.name = "mickey-mouse";
-        command.maxWaitAttempts = 2; // total timeout of 4 seconds
-        command.doCall();
+        command.maxRetryAttempts = 2; // total timeout of 4 seconds
+        int exit = command.doCall();
+        Assertions.assertEquals(0, exit);
 
         Assertions.assertTrue(
-                printer.getOutput().contains("Pod for label camel.apache.org/integration=mickey-mouse not available"));
+                printer.getOutput().contains("Pod for label app.kubernetes.io/name=mickey-mouse not available"));
     }
 
     @Test
@@ -44,7 +45,7 @@ class PodLogsTest extends KubernetesBaseTest {
         Pod pod = new PodBuilder()
                 .withNewMetadata()
                 .withName("pod")
-                .withLabels(Collections.singletonMap(BaseTrait.INTEGRATION_LABEL, "routes"))
+                .withLabels(Map.of(BaseTrait.KUBERNETES_NAME_LABEL, "routes"))
                 .endMetadata()
                 .withNewStatus()
                 .withPhase("Running")
@@ -54,7 +55,7 @@ class PodLogsTest extends KubernetesBaseTest {
         kubernetesClient.pods().resource(pod).create();
 
         var podLog = createCommand();
-        podLog.maxLogMessages = 10;
+        podLog.maxMessageCount = 10;
         podLog.name = "routes";
         int exit = podLog.doCall();
         Assertions.assertEquals(0, exit);
